export interface DashboardSummary {
  totalFuel: number;
  pendingOrders: number;
}
